--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <h1>Welcome to the Homepage!</h1>
       <h1>If any inquries contact us at qweetlystudios@gmail.com</h1>
       <de>Qweetly Studios is a game and app development studio created in the year 2025.</de>
-      <a href=malito:qweetlystudios@gmail.com><button>Email us</button></a>
+      <a href=mailto:qweetlystudios@gmail.com><button>Email us</button></a>
       <div>
       
       </div>
