--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
       <h1>Welcome to the Homepage!</h1>
       <h1>If any inquries contact us at qweetlystudios@gmail.com</h1>
       <de>Qweetly Studios is a game and app development studio created in the year 2025.</de>
+      <div>
       <a href=mailto:qweetlystudios@gmail.com><button>Email us</button></a>
       <a href="/team"><button>Meet our team.</button></a>
       <a href="/games"><button>Check out our games!</button>
-        <a href="/mailtousagehelp"><button>Mailto usage help</button>
-          <a href="/qw"><button>Example</button>
-            <h5>2025 Qweetly studios and it's logo in registered and unregistered countries all rights reserved.</h5>
+        <a href="/mailtousagehelp"><button>Mailto usage help</button></a>
+          <a href="/qw"><button>Example</button></a>
+        </div>
+          <h5>2025 Qweetly studios and it's logo in registered and unregistered countries all rights reserved.</h5>
       <div>
       
       </div>
