--- a/team/index.html
+++ b/team/index.html
@@ -8,7 +8,7 @@
    <h3>          Kaspars Zihmanis</h3> <img src /img/team/kz/ alt="KasparsZihmanis" height="150px" width="150px">
 
     <h2>         Creator, founder, owner, CEO, Main Programmer.</h2>
-     <h3>               Oskars Zihmanis</h3> <img src /img/team/kz/ alt="OskarsZihmanis" height"150px" width="150px>
+     <h3>               Oskars Zihmanis</h3> <img src /img/team/oz/ alt="OskarsZihmanis" height"150px" width="150px>
    <h1>That's all.</h1>   <a href="https://qweetlystudios.github.io"><button>Homepage</button></a>
   </html>
 </head>
