--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <a href="/games"><button>Check out our games!</button>
         <a href="/mailtousagehelp"><button>Mailto usage help</button></a>
           <a href="/qw"><button>Example</button></a>
+        <h1>Notice!</h1>
+<h3>We're doinng a switcharoo!</h3>
+        <h4>Why are we doing it you may ask! Visit qweetlystudios.github.io/switcharoo/ or <a href= "/switcharoo">Click or tap me!</a></h4>
         </div>
           <h5>2025 Qweetly studios, Qweetly all rights reserved.</h5>
       <div>
