--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="/mailtousagehelp"><button>Mailto usage help</button></a>
           <a href="/qw"><button>Example</button></a>
         <h1>Notice!</h1>
-<h3>We're doinng a switcharoo!</h3>
+<h3>We're doing a switcharoo!</h3>
         <h4>Why are we doing it you may ask! Visit qweetlystudios.github.io/switcharoo/ or <a href= "/switcharoo">Click or tap me!</a></h4>
         </div>
           <h5>2025 Qweetly studios, Qweetly all rights reserved.</h5>
