--- a/qw/index.html
+++ b/qw/index.html
@@ -1,8 +1,9 @@
 <DOCTYPE html>
+<html>
   <head>
-    <body>
-    <title>qw - Qweetly </title>
-      <h1>Example</h1>
-      <h4>example</h4>
-    </body>
+    <style>
+      h1 {text-align: center;}
+    </style>
+    <h1>This is a example page!</h1>
   </head>
+</html>
