--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
   <head>
     <html> 
    <title>Qweetly Homepage</title>
+     <style>
+       h1 {text-align: center;}
+       h1 {text-align: center:}
+       de {text-align: center;}
+       h1 text-align: center;}
+       h3 {text-align: center;}
+       h4 {text-align: center;}
+       h5 {text-align: center;}
+     </style>
       <h1>Welcome to the Homepage!</h1>
       <h1>If any inquries contact us at qweetlystudios@gmail.com</h1>
       <de>Qweetly Studios is a game and app development studio created in the year 2025.</de>
