--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
        h1 {text-align: center;}
        h1 {text-align: center:}
        de {text-align: center;}
+       a {text-align: center;}
+       a {text-align: center;}
+       a {text-align: center;}
+       a {text-align: center;}
        h1 text-align: center;}
        h3 {text-align: center;}
        h4 {text-align: center;}
