--- a/index.html
+++ b/index.html
@@ -3,30 +3,35 @@
     <html> 
    <title>Qweetly Homepage</title>
      <style>
+       div {text-align: left;}
+       div {text-align: left;}
+       div {text-align: left;}
+       div {text-align: left;}
        h1 {text-align: center;}
        h1 {text-align: center:}
-       de {text-align: center;}
+       h3 {text-align: center;}
        a {text-align: center;}
        a {text-align: center;}
        a {text-align: center;}
        a {text-align: center;}
-       h1 text-align: center;}
+       h1 {text-align: center;}
        h3 {text-align: center;}
        h4 {text-align: center;}
        h5 {text-align: center;}
      </style>
+      <div><a href=mailto:qweetlystudios@gmail.com><button>Email us</button></a></div>
+      <div><a href="/team"><button>Meet our team.</button></a></div>
+      <div><a href="/games"><button>Check out our games!</button></a></div>
+       <div><a href="/mailtousagehelp"><button>Mailto usage help</button></a></div>
+          <div><a href="/qw"><button>Example</button></a></div>
       <h1>Welcome to the Homepage!</h1>
       <h1>If any inquries contact us at qweetlystudios@gmail.com</h1>
-      <de>Qweetly Studios is a game and app development studio created in the year 2025.</de>
+      <h3>Qweetly Studios is a game and app development studio created in the year 2025.</h3>
       <div>
       <div>
-      <a href=mailto:qweetlystudios@gmail.com><button>Email us</button></a>
-      <a href="/team"><button>Meet our team.</button></a>
-      <a href="/games"><button>Check out our games!</button>
-        <a href="/mailtousagehelp"><button>Mailto usage help</button></a>
-          <a href="/qw"><button>Example</button></a>
+
         <h1>Notice!</h1>
-<h3>We're doing a switcharoo!</h3>
+          <h3>We're doing a switcharoo!</h3>
         <h4>Why are we doing it you may ask! Visit qweetlystudios.github.io/switcharoo/ or <a href= "/switcharoo">Click or tap me!</a></h4>
         </div>
           <h5>2025 Qweetly studios, Qweetly all rights reserved.</h5>
