--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
        h5 {text-align: center;}
      </style>
       <div><a href=mailto:qweetlystudios@gmail.com><button>Email us</button></a></div>
+      <div></div>
+      <div></div>
       <div><a href="/team"><button>Meet our team.</button></a></div>
+            <div></div>
+      <div></div>
       <div><a href="/games"><button>Check out our games!</button></a></div>
+            <div></div>
+      <div></div>
        <div><a href="/mailtousagehelp"><button>Mailto usage help</button></a></div>
+            <div></div>
+      <div></div>
           <div><a href="/qw"><button>Example</button></a></div>
       <h1>Welcome to the Homepage!</h1>
       <h1>If any inquries contact us at qweetlystudios@gmail.com</h1>
