--- a/team/index.html
+++ b/team/index.html
@@ -10,5 +10,7 @@
     <h2>         Creator, founder, owner, CEO, Main Programmer.</h2>
      <h3>               Oskars Zihmanis</h3> <img src /img/team/oz/ alt="OskarsZihmanis" height"150px" width="150px>
    <h1>That's all.</h1>   <a href="https://qweetlystudios.github.io/"><button>Homepage</button></a>
+    <h1>NOTICE!</h1>
+    <h3>This page will be unavailable until 2025.07.17 9:10 For more info press the button --> <a href="/team/availability/unvailability/info"><button>More info</button></a></h3>
   </html>
 </head>
