--- a/team/index.html
+++ b/team/index.html
@@ -2,14 +2,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
   <html>
-    <title>Our team - Qweetly</title>
-    <h1>                                  Meet our team                     </h1>
-<h2>           Main designer.</h2>
-   <h3>          Kaspars Zihmanis</h3> <img src /img/team/kz/ alt="KasparsZihmanis" height="150px" width="150px">
-
-    <h2>         Creator, founder, owner, CEO, Main Programmer.</h2>
-     <h3>               Oskars Zihmanis</h3> <img src /img/team/oz/ alt="OskarsZihmanis" height"150px" width="150px>
-   <h1>That's all.</h1>   <a href="https://qweetlystudios.github.io/"><button>Homepage</button></a>
+    <title>Page Unavailable - Qweetly</title>
+    <style>
+      h1 {text-align}: center;}
+      h3 {text-align}: center;}
+    </style>
     <h1>NOTICE!</h1>
     <h3>This page will be unavailable until 2025.07.17 9:10 For more info press the button --> <a href="/team/availability/unvailability/info"><button>More info</button></a></h3>
   </html>
