--- a/team/index.html
+++ b/team/index.html
@@ -10,5 +10,6 @@
   
     <h1>NOTICE!</h1>
     <h3>This page will be unavailable until 2025.07.17 9:10 For more info press the button --> <a href="/team/availability/unvailability/info"><button>More info</button></a></h3>
+<h1>Make sure to go the new page to /corp/team/ because it will be the team page for now</h1>
   </html>
 </head>
