--- a/team/replacement-for-unavailable/team/index.html
+++ b/team/replacement-for-unavailable/team/index.html
@@ -6,10 +6,10 @@
     <title>Our team - Qweetly</title>
     <h1>                                  Meet our team                     </h1>
 <h2>           Main designer.</h2>
-   <h3>          Kaspars Zihmanis</h3> <img src /img/team/kz/ alt="KasparsZihmanis" height="150px" width="150px">
+   <h3>          Kaspars Zihmanis</h3> <img src /img/team/kz.jpg/ alt="KasparsZihmanis" height="150px" width="150px">
 
     <h2>         Creator, founder, owner, CEO, Main Programmer.</h2>
-     <h3>               Oskars Zihmanis</h3> <img src /img/team/oz/ alt="OskarsZihmanis" height"150px" width="150px>
+     <h3>               Oskars Zihmanis</h3> <img src /img/team/oz.jpg/ alt="OskarsZihmanis" height"150px" width="150px>
    <h1>That's all.</h1>   <a href="/"><button>Homepage</button></a>
   </html>
 </head>
