--- a/team/index.html
+++ b/team/index.html
@@ -2,14 +2,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
   <html>
-      <style>
-      h1 {text-align}: center;}
-      h3 {text-align}: center;}
-    </style>
-    <title>Page Unavailable - Qweetly</title>
-  
-    <h1>NOTICE!</h1>
-    <h3>This page will be unavailable until 2025.07.17 9:10 For more info press the button --> <a href="/team/availability/unavailability/info"><button>More info</button></a></h3>
-<h1>Make sure to go the new page to qweetlystudios.github.io/team/replacement-for-unavailable-page/team/ because it will be the team page for now or press the button --> <a href="/team/replacement-for-unavailable/team/"><button>Replacement team page</button></a></h1>
-  </html>
-</head>
+<title>Team - Qweetly</title>
+<style>
+  h1 {text-align: center}
+</style>
+<h1>Meet our team!</h1>
+<h3>Oskars Zihmanis: Owner, Founder, CEO, Main Programmer.</h3> <img src https://qweetlystudios.github.io/img/team/oz.jpg/ alt="OskarsZihmanis" height"150px" width"150>
+<h1>Notice!</h1>
+<h3>This page is not fully finished yet!</h3>
+<p>Qweetly Studios, Qweetly All rights reserved</p>
+     
