--- a/team/index.html
+++ b/team/index.html
@@ -4,7 +4,9 @@
   <html>
 <title>Team - Qweetly</title>
 <style>
-  h1 {text-align: center}
+  h1 {text-align: center;}
+  h3 {text-align: center;}
+p {text-align: center;}
 </style>
 <h1>Meet our team!</h1>
 <h3>Oskars Zihmanis: Owner, Founder, CEO, Main Programmer.</h3> <img src https://qweetlystudios.github.io/img/team/oz.jpg/ alt="OskarsZihmanis" height"150px" width"150>
