--- a/team/index.html
+++ b/team/index.html
@@ -7,9 +7,10 @@
   h1 {text-align: center;}
   h3 {text-align: center;}
 p {text-align: center;}
+  img 
 </style>
 <h1>Meet our team!</h1>
-<h3>Oskars Zihmanis: Owner, Founder, CEO, Main Programmer.</h3> <img src https://qweetlystudios.github.io/img/team/oz.jpg/ alt="OskarsZihmanis" height"150px" width"150>
+<h3>Oskars Zihmanis: Owner, Founder, CEO, Main Programmer.</h3> <img src="https://qweetlystudios.github.io/img/team/oz.jpg/" alt="OskarsZihmanis" align="middle" height="150px" width="150>
 <h1>Notice!</h1>
 <h3>This page is not fully finished yet!</h3>
 <p>Qweetly Studios, Qweetly All rights reserved</p>
