--- a/team/index.html
+++ b/team/index.html
@@ -8,7 +8,7 @@
   h3 {text-align: center;}
 p {text-align: center;}
   img  {
-    float: right;
+    float: middle;
 }
 </style>
 <h1>Meet our team!</h1>
