--- a/games/index.html
+++ b/games/index.html
@@ -4,6 +4,6 @@
       <title>Games - Qweetly</title>
       <h1>Welcome to the games page!</h1>
       <h4>In this page you'll find everything you need from <a href=/games/chicken-road-crossing/>Chicken road crossing</a> to even other games.</h4>
-      <li>Chicken road crossing has not been made!!!!</li>
+      <li>CHICKEN ROAD CROSSING IS MADE!!! CREDITS TO AUTOCODEX or autocodex_2001 on youtube</li>
     </html>
   </head>
