--- a/404.html
+++ b/404.html
@@ -2,9 +2,11 @@
   <head>
     <html>
       <title>404 - Qweetly</title>
-      <h1>-----------------------------------------404 the page cannot be found!-----------------------------------------------</h1>
-                                <h3>The server cannot find the specificated page that you typed.</h3>
-
-                                 <h3>It may be moved or deleted.</h3>
+      <h1>Failed to load resource: the server responded with a status of 404</h1>
+<h3>The server cannot find the speficicated page</h3>
+<style>
+  h1 {text-align: center;}
+  h3 {text-align: center;}
+</style>
     </html>
   </head>
