--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+qwe<DOCTYPE html>
   <head>
     <html> 
    <title>Qweetly Homepage</title>
@@ -39,8 +39,7 @@
       <div>
 
         <h1>Notice!</h1>
-          <h3>We're doing a switcharoo!</h3>
-        <h4>Why are we doing it you may ask! Visit qweetlystudios.github.io/switcharoo/ or <a href= "/switcharoo">Click or tap me!</a></h4>
+ <h1>This page will be offline for sometime. If you want to head to the homepage visit qweetlystudios.github.io/homepage or <a href="/homepage">Click me!</a></h1>
         </div>
           <h5>2025 Qweetly studios, Qweetly all rights reserved.</h5>
       <div>
