--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 qwe<DOCTYPE html>
   <head>
     <html> 
-     <img src="https://qweetlystudios.github.io/img/main/sitebkgrndqweetlystudiosid=81293129.jpg" alt="Qweetly Studios site background id 81293129" height="1920" width="1080">
+    <body background="https://qweetlystudios.github.io/img/main/sitebkgrndqweetlystudiosid=81293129.jpg">
    <title>Qweetly Homepage</title>
      <style>
        div {text-align: left;}
