--- a/index.html
+++ b/index.html
@@ -1,50 +1,24 @@
-qwe<DOCTYPE html>
+<DOCTYPE html>
   <head>
-    <html> 
-    <body background="https://qweetlystudios.github.io/img/main/sitebkgrndqweetlystudiosid=81293129.jpg">
-   <title>Qweetly Homepage</title>
-     <style>
-       div {text-align: left;}
-       div {text-align: left;}
-       div {text-align: left;}
-       div {text-align: left;}
-       h1 {text-align: center;}
-       h1 {text-align: center:}
-       h3 {text-align: center;}
-       a {text-align: center;}
-       a {text-align: center;}
-       a {text-align: center;}
-       a {text-align: center;}
-       h1 {text-align: center;}
-       h3 {text-align: center;}
-       h4 {text-align: center;}
-       h5 {text-align: center;}
-     </style>
-      <div><a href=mailto:qweetlystudios@gmail.com><button>Email us</button></a></div>
-      <div></div>
-      <div></div>
-      <div><a href="/team"><button>Meet our team.</button></a></div>
-            <div></div>
-      <div></div>
-      <div><a href="/games"><button>Check out our games!</button></a></div>
-            <div></div>
-      <div></div>
-       <div><a href="/mailtousagehelp"><button>Mailto usage help</button></a></div>
-            <div></div>
-      <div></div>
-          <div><a href="/qw"><button>Example</button></a></div>
-      <h1>Welcome to the Homepage!</h1>
-      <h1>If any inquries contact us at qweetlystudios@gmail.com</h1>
-      <h3>Qweetly Studios is a game and app development studio created in the year 2025.</h3>
-      <div>
-      <div>
-
-        <h1>Notice!</h1>
- <h1>This page will be offline for sometime. If you want to head to the homepage visit qweetlystudios.github.io/homepage or <a href="/homepage">Click me!</a></h1>
-        </div>
-          <h5>2025 Qweetly studios, Qweetly all rights reserved.</h5>
-      <div>
-      
-      </div>
-   </html>
+    <html lang="en">
+  <meta charset="UTF-8">
+  <meta name="description" content="Qweetly Studios">
+  <meta name="keywords" content="Qweetly Studios Site">
+  <meta name="author" content="Qweetly Studios">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+      <title>Qweetly Studios</title>
+      <h1>Qweetly Homepage</h1>
+      <h3>We updated the page!</h3>
+      <h4>This will be the page!</h4>
+      <h1>Notice!</h1>
+      <h5>Were doing a switcharoo!</h5>
+      <b>You may ask what page?</b>
+      <h3><li>The page is the example page /qw/ we are changing it to /example/</li></h3>
+      <h3>For any inquries contact us at <a href="mailto:qweetlystudios@gmail.com">qweetlystudios@gmail.com</a></h3>
+      <footer>2025 Qweetly Studios all rights reserved.</footer>
+      <style>
+        h1, h2, h3, b, li, footer {
+          text-align: center
+        }
+      </style>
   </head>
