--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   <meta name="author" content="Qweetly Studios">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
       <title>Qweetly Studios</title>
+      <div><a href=mailto:qweetlystudios@gmail.com><button>Email us</button></a></div>
+      <div></div>
+      <div></div>
+      <div><a href="/team"><button>Meet our team.</button></a></div>
+            <div></div>
+      <div></div>
+      <div><a href="/games"><button>Check out our games!</button></a></div>
+            <div></div>
+      <div></div>
+       <div><a href="/mailtousagehelp"><button>Mailto usage help</button></a></div>
+            <div></div>
+      <div></div>
+          <div><a href="/qw"><button>Example</button></a></div>
       <h1>Qweetly Homepage</h1>
       <h3>We updated the page!</h3>
       <h4>This will be the page!</h4>
@@ -17,9 +30,8 @@
       <h3>For any inquries contact us at <a href="mailto:qweetlystudios@gmail.com">qweetlystudios@gmail.com</a></h3>
       <footer>2025 Qweetly Studios all rights reserved.</footer>
       <style>
-        h1, h2, h3, b, li, footer {
+        h1, h2, h3, h4, h5, b, li, footer {
           text-align: center
         }
       </style>
   </head>
-</html>
