--- a/switcharoo/index.html
+++ b/switcharoo/index.html
@@ -1,15 +1,14 @@
 <DOCTYPE html>
   <head>
-    <html>
+    <html lang="en">
+  <meta charset="UTF-8">
+  <meta name="description" content="Qweetly Studios">
+  <meta name="keywords" content="Qweetly Studios Site">
+  <meta name="author" content="Qweetly Studios">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
       <title>Switcharoo - Qweetly</title>
-      <middle><h1>Switcharoo!!</h1></middle>
-      <h1>we are doing a swticharoo in the Mailtousagehelp page!</h1>
-      <h3>Why we are doing this? You may ask... Well it's because of the long name! </h3>
-      <p>Why we are doing this?</p>
-      <li>To make the page name having less characters!</li>
-      <li>For when updating the page there will be no typo's.</li>
-      <li>Faster when typing on hand without pressing any button's.</li>
-      <middle><h1>New Mailto usage help page is replaced to qweetlystudios.github.io/mailtohelp/</h1></middle>
-      <h5>2025 Qweetly studios, Qweetly all rights reserved</h5>
+      <h1>We are doing a switcharoo to /qw page!</h1>
+      <h2>Why? Because so... It would be /example instead of random 2 characters.</h2>
+      <footer>2025 Qweetly Studios all rights reserved.</footer>
     </html>
   </head>
