--- a/switcharoo/index.html
+++ b/switcharoo/index.html
@@ -10,5 +10,10 @@
       <h1>We are doing a switcharoo to /qw page!</h1>
       <h2>Why? Because so... It would be /example instead of random 2 characters.</h2>
       <footer>2025 Qweetly Studios all rights reserved.</footer>
+      <style>
+        h1, h2, h3 {
+          text-align: center
+        }
+      </style>
     </html>
   </head>
