--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <h5>Were doing a switcharoo!</h5>
       <h4>You may ask what page?</h4>
       <h3><li>The page is the example page /qw/ we are changing it to /example/</li></h3>
+      <h3>Visit <a href="qweetlystudios.github.io/switcharoo">qweetlystudios.github.io/switcharoo</a></h3>
       <h3>For any inquries contact us at <a href="mailto:qweetlystudios@gmail.com">qweetlystudios@gmail.com</a></h3>
       <footer>2025 Qweetly Studios all rights reserved.</footer>
       <style>
