--- a/index.html
+++ b/index.html
@@ -35,4 +35,5 @@
           text-align: center
         }
       </style>
+      <h4>NOTICE! When wanting to copy Qweetly Studios Code you will need to send a request at qweetlystudios@gmail.com with the title "Code Copy Request"</h4>
   </head>
