--- a/index.html
+++ b/index.html
@@ -35,5 +35,5 @@
           text-align: center
         }
       </style>
-      <h4>NOTICE! When wanting to copy Qweetly Studios Code you will need to send a request at qweetlystudios@gmail.com with the title "Code Copy Request"</h4>
+      <h4>NOTICE! When wanting to copy Qweetly Studios Code you will need to send a request at qweetlystudios@gmail.com with the title "Code Copy Request" (Without double quote)</h4>
   </head>
