--- a/site-updates/index.html
+++ b/site-updates/index.html
@@ -8,6 +8,10 @@
       <li>Created the /policies page</li>
 <li>Updated the /img/ page and added in the /img/ team /img/team/</li>
       <li>Updated the /team page</li>
+      <p>2025.08.10</p>
+      <li>Updated the qweetlystudios.github.io/ page</li>
+      <li>Renamed the example page from /qw to /example</li>
+      <li>Updated the /team page</li>
       
     </html>
   </head>
