--- a/qw/index.html
+++ b/qw/index.html
@@ -1,9 +1,7 @@
 <DOCTYPE html>
 <html>
   <head>
-    <style>
-      h1 {text-align: center;}
-    </style>
-    <h1>This is a example page!</h1>
+<h1>301 - The file has permanetly moved to a diffrent location</h1>
+    <h3>The page has permanetly moved to <a href=qweetlystudios.github.io/example>qweetlystudios.github.io/example</a></h3>
   </head>
 </html>
