--- a/qw/index.html
+++ b/qw/index.html
@@ -2,6 +2,6 @@
 <html>
   <head>
 <h1>301 - The file has permanetly moved to a diffrent location</h1>
-    <h3>The page has permanetly moved to <a href=qweetlystudios.github.io/example>qweetlystudios.github.io/example</a></h3>
+    <h3>The page has permanetly moved to <a href=/example>qweetlystudios.github.io/example</a></h3>
   </head>
 </html>
