--- a/index.html
+++ b/index.html
@@ -1,39 +1,19 @@
-<DOCTYPE html>
-  <head>
-    <html lang="en">
-  <meta charset="UTF-8">
-  <meta name="description" content="Qweetly Studios">
-  <meta name="keywords" content="Qweetly Studios Site">
-  <meta name="author" content="Qweetly Studios">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-      <title>Qweetly Studios</title>
-      <div><a href=mailto:qweetlystudios@gmail.com><button>Email us</button></a></div>
-      <div></div>
-      <div></div>
-      <div><a href="/team"><button>Meet our team.</button></a></div>
-            <div></div>
-      <div></div>
-      <div><a href="/games"><button>Check out our games!</button></a></div>
-            <div></div>
-      <div></div>
-       <div><a href="/mailtousagehelp"><button>Mailto usage help</button></a></div>
-            <div></div>
-      <div></div>
-          <div><a href="/qw"><button>Example</button></a></div>
-      <h1>Qweetly Homepage</h1>
-      <h3>We updated the page!</h3>
-      <h4>This will be the page!</h4>
-      <h1>Notice!</h1>
-      <h5>Were doing a switcharoo!</h5>
-      <h4>You may ask what page?</h4>
-      <h3><li>The page is the example page /qw/ we are changing it to /example/</li></h3>
-      <h3>Visit <a href="qweetlystudios.github.io/switcharoo">qweetlystudios.github.io/switcharoo</a></h3>
-      <h3>For any inquries contact us at <a href="mailto:qweetlystudios@gmail.com">qweetlystudios@gmail.com</a></h3>
-      <footer>2025 Qweetly Studios all rights reserved.</footer>
-      <style>
-        h1, h2, h3, h4, h5, b, li, footer {
-          text-align: center
-        }
-      </style>
-      <h4>NOTICE! When wanting to copy Qweetly Studios Code you will need to send a request at qweetlystudios@gmail.com with the title "Code Copy Request" (Without double quote)</h4>
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Child Safety - Qweetly Studios</title>
+    </head>
+    <body>
+        <h1>Child Safety</h1>
+        <p>At Qweetly Studios, we take child safety seriously. Here are some resources and tips to help keep your child safe while playing our games:</p>
+        <ul>
+            <li>Monitor your child's playtime and ensure they take regular breaks.</li>
+            <li>Encourage your child to play games that are age-appropriate.</li>
+            <li>Teach your child about online safety and the importance of not sharing personal information.</li>
+            <li>Use parental controls to manage your child's gaming experience.</li>
+        </ul>
+        <p>If you have any concerns or questions about child safety, please don't hesitate to <a href="mailto:qweetlystudios@gmail.com">contact us</a>.</p>
+    </body>
+</html>
