--- a/index.html
+++ b/index.html
@@ -3,17 +3,45 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Child Safety - Qweetly Studios</title>
-    </head>
-    <body>
-        <h1>Child Safety</h1>
-        <p>At Qweetly Studios, we take child safety seriously. Here are some resources and tips to help keep your child safe while playing our games:</p>
-        <ul>
-            <li>Monitor your child's playtime and ensure they take regular breaks.</li>
-            <li>Encourage your child to play games that are age-appropriate.</li>
-            <li>Teach your child about online safety and the importance of not sharing personal information.</li>
-            <li>Use parental controls to manage your child's gaming experience.</li>
-        </ul>
-        <p>If you have any concerns or questions about child safety, please don't hesitate to <a href="mailto:qweetlystudios@gmail.com">contact us</a>.</p>
-    </body>
-</html>
+        <title>Qweetly Studios</title>
+              <div><a href=mailto:qweetlystudios@gmail.com><button>Email us</button></a></div>
+      <div></div>
+      <div></div>
+      <div><a href="/team"><button>Meet our team.</button></a></div>
+            <div></div>
+      <div></div>
+      <div><a href="/games"><button>Check out our games!</button></a></div>
+            <div></div>
+      <div></div>
+       <div><a href="/mailtousagehelp"><button>Mailto usage help</button></a></div>
+            <div></div>
+      <div></div>
+          <div><a href="/qw"><button>Example</button></a></div>
+            <div></div>
+            <h1>Qweetly Studios</h1>
+            <h3>We updated the page visit /site-updates to see it</h3>
+            <div></div>
+            <h3>We are a game development studio focused on creating unique and engaging experiences for players.</h3>
+            <div></div>
+            <h3>We are passionate about your <a href="/child-safety">child safety.</a></h3>
+            <div></div>
+            <h3>We believe in the power of play to bring people together and create lasting memories.</h3>
+            <div></div>
+            <h3>Join us on this journey and let's create something amazing together!</h3>
+            <div></div>
+            <h1>Upcoming games!</h1>
+            <div></div>
+            <li>GoBlox(We aren't affiliated with <a href="https://corp.roblox.com/">Roblox Corporation</a> this isn't a copy of the game <a href="https://en.wikipedia.org/wiki/Roblox">Roblox</a>)</li>
+            <style>
+                li {
+                    list-style-type: none;
+                }
+                h1, h2, h3, li, b, a  {
+                    margin: 0;
+                    padding: 0;
+                    text-align: center; 
+                    font-family: Arial, sans-serif;
+                    text-decoration: none;
+                    text-transform: none;
+                }
+            </style>
