--- a/goblox/index.html
+++ b/goblox/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
  <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>GoBlox - Qweetly Studios</title>
-<h1>GoBlox is currently being developed! stay tuned.</h1>
-<style> h1, h2, h3, h4, h5, h6, b, a{
-
-  text-align:center
-}</style>
+<title>Goblox - Qweetly Studios</title>
+<a href="/gif/comingsoon.gif">
+<
