--- a/goblox/index.html
+++ b/goblox/index.html
@@ -3,4 +3,4 @@
  <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Goblox - Qweetly Studios</title>
-<img src="/gif/comingsoon.gif"
+<img src="/gif/comingsoon.gif">
