--- a/goblox/index.html
+++ b/goblox/index.html
@@ -4,3 +4,4 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Goblox - Qweetly Studios</title>
 <img src="/gif/comingsoon.gif">
+<h1>Welcome to GOBLOX!!!!!!!!!</h1> <img src="/gif/welcometogoblox"
