--- a/goblox/index.html
+++ b/goblox/index.html
@@ -5,4 +5,10 @@
 <title>Goblox - Qweetly Studios</title>
 <img src="/gif/comingsoon.gif">
 <h1>Welcome to GOBLOX!!!!!!!!!</h1> <img src="/gif/welcometogoblox.gif">
+<h5>What's in the game?</h5>
+<li>2D game</li>
+<li>Cool adventures</li>
+<li>Be a mehanik and fix your skateboard</li>
+<li>Drink, smoke, eat, drink, sleep, other</li>
+
 
