--- a/goblox/index.html
+++ b/goblox/index.html
@@ -10,5 +10,5 @@
 <li>Cool adventures</li>
 <li>Be a mehanik and fix your skateboard</li>
 <li>Drink, smoke, eat, drink, sleep, other</li>
-
+<h2>Here on web!!!!! Go play</h2> <img src="/gif/logo_mehanik_goblox.gif"
 
