--- a/goblox/index.html
+++ b/goblox/index.html
@@ -10,5 +10,7 @@
 <li>Cool adventures</li>
 <li>Be a mehanik and fix your skateboard</li>
 <li>Drink, smoke, eat, drink, sleep, other</li>
-<h2>Here on web!!!!! Go play</h2> <img src="/gif/logo_mehanik_goblox.gif"
+<h2>Here on web!!!!! Go play</h2> <img src="/gif/logo_mehanik_goblox.gif">
+<h1>NOTICE! The game is not finished nor published to the public</h1>
+</html>
 
