--- a/goblox/index.html
+++ b/goblox/index.html
@@ -10,7 +10,10 @@
 <li>Cool adventures</li>
 <li>Be a mehanik and fix your skateboard</li>
 <li>Drink, smoke, eat, drink, sleep, other</li>
-<h2>Here on web!!!!! Go play</h2> <img src="/gif/logo_mehanik_goblox.gif">
+<h2>Here on web!!!!! Go play GoBlox when it will be released to the public or Early Access to the public</h2> <img src="/gif/logo_mehanik_goblox.gif">
 <h1>NOTICE! The game is not finished nor published to the public</h1>
+<style> h1, h2, h3, h4, h5, h6, p, b, a, img, li{
+ text-align: center
+}</style>
 </html>
 
