--- a/goblox/index.html
+++ b/goblox/index.html
@@ -13,6 +13,11 @@
 <h2>Here on web!!!!! Go play GoBlox when it will be released to the public or Early Access to the public</h2> <img src="/gif/logo_mehanik_goblox.gif">
 <h1>NOTICE! The game is not finished nor published to the public</h1>
 <style> h1, h2, h3, h4, h5, h6, p, b, a, img, li{
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
  text-align: center
 }</style>
 </html>
