--- a/goblox/index.html
+++ b/goblox/index.html
@@ -1,3 +1,4 @@
+< --- Copyright Qweetly studios and it's code is 
 <!DOCTYPE html>
 <html lang="en">
  <meta charset="UTF-8">
@@ -12,6 +13,7 @@
 <li>Drink, smoke, eat, drink, sleep, other</li>
 <h2>Here on web!!!!! Go play GoBlox when it will be released to the public or Early Access to the public</h2> <img src="/gif/logo_mehanik_goblox.gif">
 <h1>NOTICE! The game is not finished nor published to the public</h1>
+<a href="https://qweetlystudios.github.io/goblox">GoBlox by Qweetly Studios</a> © 2025 by <a href="https://qweetlystudios.github.io/">Qweetly Studios</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nd.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;">
 <style> h1, h2, h3, h4, h5, h6, p, b, a, img, li{
 .center {
   display: block;
