--- a/goblox/index.html
+++ b/goblox/index.html
@@ -1,4 +1,4 @@
-< --- Copyright Qweetly studios and it's code is 
+<!-- GoBlox by Qweetly Studios © 2025 by Qweetly Studios is licensed under CC BY-NC-ND 4.0 -->
 <!DOCTYPE html>
 <html lang="en">
  <meta charset="UTF-8">
