--- a/goblox/index.html
+++ b/goblox/index.html
@@ -1,4 +1,4 @@
-<!-- GoBlox by Qweetly Studios © 2025 by Qweetly Studios is licensed under CC BY-NC-ND 4.0 -->
+<!-- GoBlox by Qweetly Studios © 2025 by Qweetly Studios is licensed under CC BY-NC-ND 4.0 https://mirrors.creativecommons.org/presskit/icons/cc.svg https://mirrors.creativecommons.org/presskit/icons/by.svg https://mirrors.creativecommons.org/presskit/icons/nc.svg https://mirrors.creativecommons.org/presskit/icons/nd.svg -->
 <!DOCTYPE html>
 <html lang="en">
  <meta charset="UTF-8">
