--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div></div>
             <h1>Upcoming games!</h1>
             <div></div>
-            <li>GoBlox(We aren't affiliated with <a href="https://corp.roblox.com/">Roblox Corporation</a> this isn't a copy of the game <a href="https://en.wikipedia.org/wiki/Roblox">Roblox</a>)</li>
+            <li><a href="/goblox/">GoBlox</a>(We aren't affiliated with <a href="https://corp.roblox.com/">Roblox Corporation</a> this isn't a copy of the game <a href="https://en.wikipedia.org/wiki/Roblox">Roblox</a>)</li>
             <style>
                 li {
                     list-style-type: none;
@@ -45,3 +45,4 @@
                     text-transform: none;
                 }
             </style>
+
