--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 li {
                     list-style-type: none;
                 }
-                h1, h2, h3, li, b, a  {
+                h1, h2, h3, li, b, a, footer  {
                     margin: 0;
                     padding: 0;
                     text-align: center; 
@@ -46,5 +46,6 @@
                     text-transform: none;
                 }
             </style>
+
 
 
