--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>Upcoming games!</h1>
             <div></div>
             <li><a href="/goblox/">GoBlox</a>(We aren't affiliated with <a href="https://corp.roblox.com/">Roblox Corporation</a> this isn't a copy of the game <a href="https://en.wikipedia.org/wiki/Roblox">Roblox</a>)</li>
-<footer>Epic Forge Technologies all rights reserved. Qweetly Studios is a part of Epic Forge Technologies And a part of Epic Forge Technologies Company Solutions(EFTCS)</footer>
+<footer>2025 QweetlyStudios all rights reserved</footer>
             <style>
                 li {
                     list-style-type: none;
@@ -46,6 +46,7 @@
                     text-transform: none;
                 }
             </style>
+
 
 
 
