--- a/site-updates/index.html
+++ b/site-updates/index.html
@@ -9,9 +9,11 @@
 <li>Updated the /img/ page and added in the /img/ team /img/team/</li>
       <li>Updated the /team page</li>
       <p>2025.08.10</p>
-      <li>Updated the qweetlystudios.github.io/ page</li>
+      <li>Updated the rootpage</li>
       <li>Renamed the example page from /qw to /example</li>
       <li>Updated the /team page</li>
-      
+      <p>2025.03.11</p>
+      <li>Added a secret page(if founding need a live proof without cuts and no using github)</li>
+      <li>Updated the rootpage</li>
     </html>
   </head>
