--- a/download/index.html
+++ b/download/index.html
@@ -3,5 +3,14 @@
  <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Download - Qweetly Studios</title>
-<h1>This isnt finished!</h1>
-<h2>Please come soon back</h2>
+<h1>Downloads</h1>
+ <h3>There is no downloads for now</h3>
+ <h5>Please come back later</h5>
+ <footer>2025 Qweetly Studios all rights reserved</footer>
+ <style>
+  h1, h2, h3, h4, h5
+  {
+   text-align:center ;
+  }
+ </style>
+ 
