--- a/download/index.html
+++ b/download/index.html
@@ -8,7 +8,7 @@
  <h5>Please come back later</h5>
  <footer>2025 Qweetly Studios all rights reserved</footer>
  <style>
-  h1, h2, h3, h4, h5
+  h1, h2, h3, h4, h5, footer
   {
    text-align:center ;
   }
